--- a/configs/plugins-uac.ini
+++ b/configs/plugins-uac.ini
@@ -1,2 +1,12 @@
+; Core
 uac_core.amxx
+
+; Loaders
 uac_gmx_loader.amxx
+uac_amxbans_loader.amxx
+uac_usersini_loader.amxx
+
+; Addons
+uac_logger.amxx
+uac_commands.amxx
+uac_cm_prefix.amxx
