Use GMX-X cache instead local

--- a/configs/plugins-uac.ini
+++ b/configs/plugins-uac.ini
@@ -3,7 +3,7 @@ uac_core.amxx
 
 ; Loaders
 uac_gmx_loader.amxx
-uac_amxbans_loader.amxx
+;uac_amxbans_loader.amxx
 uac_usersini_loader.amxx
 
 ; Addons
